--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,4 +1,3 @@
-<p>It's me, </p>
 {% if latest_question_list %}
 	<ul>
 	{% for question in latest_question_list %}
@@ -6,6 +5,6 @@
 	{% endfor %}
 	</ul>
 {% else %}
-	<p>No polls are available</p>
+	<p>No polls are available.</p>
 {% endif %}
 
